--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -43,8 +43,61 @@
 }
 
 .search {
-  position: absolute;
+  position: relative;
   right: 20px;
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.loginButton {
+  position: relative;
+  right: 10px;
+  margin: 15px;
+}
+
+.headerLayout {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.loginLayoutWithBackground {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+}
+
+.darkBackground {
+  position: fixed;
+  background: rgba(0,0,0,.4);
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.loginLayout {
+  position: fixed;
+  align: center;
+  background: white;
+  width: 700px;
+  height: 100%;
+  z-index: 11;
+  left: 50%;
+  margin-left: -350px;
+  display: flex;
+  justify-content: center;
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
