--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -84,7 +84,6 @@
 
 .loginLayout {
   position: fixed;
-  align: center;
   background: white;
   width: 700px;
   height: 100%;
@@ -100,4 +99,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;*/
+  width: 700px;
+  margin: 100px auto;
+}
+
+.nav {
+  /*width: 100%;*/
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.navEl {
+  margin-left: 30px;
 }
