--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  background: white;
 }
 
 .searchIcon {
@@ -104,13 +105,12 @@
 .content {
   display: flex;
   flex-direction: column;
-  /*align-items: center;*/
+  align-items: center;
   width: 700px;
   margin: 100px auto;
 }
 
 .nav {
-  /*width: 100%;*/
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -118,4 +118,13 @@
 
 .navEl {
   margin-left: 30px;
+}
+
+.previewContainer {
+  width: 100%;
+}
+
+.previewHeader {
+  width: 100%;
+  
 }
