--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -139,7 +139,7 @@
   padding-left: 5px;
 }
 
-.previewUserAvatar {
+.previewUserAvatar, .authorAvatar {
   border-radius: 50%;
   width: 35px;
   height: 35px;
@@ -235,4 +235,16 @@
 .activeNavLink {
   font-weight: bold;
   font-style: italic;
+}
+
+.articleContainer {
+  left: 0;
+  right: 0;
+  top: 0;
+  min-height: 100%;
+  width: 100%;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
