basic comments markup implemented

--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -139,7 +139,7 @@
   padding-left: 5px;
 }
 
-.previewUserAvatar, .authorAvatar {
+.previewUserAvatar, .authorAvatar, .commentAuthorAvatar {
   border-radius: 50%;
   width: 35px;
   height: 35px;
