--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -248,3 +248,133 @@
   flex-direction: column;
   align-items: center;
 }
+
+.articleAuthorHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 70px;
+  padding-left: 10%;
+  align-self: left;
+}
+
+.articleAuthorDescription {
+  margin: 0;
+  opacity: 0.7;
+  font-size: 15px;
+}
+
+.authorAvatar {
+  height: 60px;
+  width: 60px;
+  margin-right: 15px;
+}
+
+.articleAuthor {
+  margin: 0 15px 0 0;
+}
+
+.usernameAndFollowButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 20px;
+}
+
+.articleCaption {
+  font-size: 3.7em;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+.articleDescription {
+  opacity: 0.8;
+  font-style: italic;
+}
+
+.articleContent {
+  margin: 0 10% 5% 10%;
+  font-size: 1.5em;
+}
+
+.articleComments {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.commentTitle {
+  font-size: 2.0em;
+}
+
+.commentInput {
+  width: 55%;
+  min-width: 350px;
+  max-width: 600px;
+  height: 80px;
+  max-height: 80px;
+  margin-bottom: 30px;
+}
+
+.commentsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  width: 55%;
+  min-width: 350px;
+  max-width: 600px;
+  border: 1px solid black;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.commentHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 40px;
+  margin-left: 15px;
+}
+
+.commentInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 15px;
+}
+
+.commentAuthor {
+  margin: 0;
+  font-size: 17px;
+}
+
+.commentDate {
+  margin: 0;
+  font-size: 13px;
+  opacity: 0.7;
+}
+
+.commentContent {
+  width: 90%;
+  margin: 5%;
+  font-size: 1.3em;
+}
+
+.commentFooter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.commentNumbs {
+  opacity: 0.8;
+  margin-left: 7px;
+  margin-right: 10px;
+}
