--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -2,6 +2,10 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
+body {
+  background: url(./icons/greyzz.png);
+}
+
 .nameAndLogo {
   display: flex;
   flex-direction: row;
@@ -12,6 +16,7 @@
   content: url(./icons/nameAndLogo.png);
   width: 194px;
   height: 65.5px;
+  cursor: pointer;
 }
 
 .header {
@@ -141,8 +146,10 @@
 
 .previewContainer {
   width: 100%;
-  border: 1px solid black;
+  border-radius: 10px;
   margin-bottom: 25px;
+  background: white;
+  box-shadow: 0px 0px 10px rgba(0,0,0,.25);
 }
 
 .previewHeader {
@@ -151,8 +158,8 @@
   flex-direction: row;
   align-items: center;
   height: 50px;
-  border-bottom: 1px outset black;
-  padding-left: 5px;
+  background: yellow;
+  border-radius: 10px 10px 0 0;
 }
 
 .previewUserAvatar, .authorAvatar, .commentAuthorAvatar {
@@ -214,7 +221,7 @@
 
 .previewImage {
   content: url(./icons/defaultArticle.png);
-  width: 100%;
+  width: 90%;
 }
 
 .previewFooter {
@@ -346,9 +353,11 @@
   width: 55%;
   min-width: 350px;
   max-width: 600px;
-  border: 1px solid black;
   padding: 10px;
   margin-top: 20px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,.25);
 }
 
 .commentHeader {
