--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -162,7 +162,7 @@ body {
   border-radius: 10px 10px 0 0;
 }
 
-.previewUserAvatar, .authorAvatar, .commentAuthorAvatar {
+.previewUserAvatar, .authorAvatar, .commentAuthorAvatar, .userAvatar {
   border-radius: 50%;
   width: 35px;
   height: 35px;
@@ -234,10 +234,15 @@ body {
 }
 
 .likeImg, .dislikeImg, .commentsImg {
-  height: 20px;
-  width: 20px;
+  height: 25px;
+  width: 25px;
   padding-left: 7px;
+  opacity: 0.6;
   cursor: pointer;
+}
+
+.likeImg:hover, .dislikeImg:hover, .commentsImg:hover {
+  opacity: 1;
 }
 
 .likeImg {
@@ -407,4 +412,9 @@ body {
 
 .userPageContainer {
   padding-top: 100px;
+}
+
+.userAvatar {
+  height: 60px;
+  width: 60px;
 }
