--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -418,3 +418,20 @@ body {
   height: 60px;
   width: 60px;
 }
+
+.userPageBasic {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.userPageInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userPageButtons {
+  position: absolute;
+  right: 10px;
+}
