--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -114,6 +114,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 10;
+  cursor: pointer;
 }
 
 .loginLayout {
@@ -186,7 +187,7 @@ body {
   border-radius: 10px;
   cursor: pointer;
   border: none;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, .25), inset 0 2px 0 rgba(255, 255, 255, .6);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, .25), inset 0 2px 0 rgba(255, 255, 255, .6);
 }
 
 .button:focus {
@@ -235,6 +236,7 @@ body {
   height: 50px;
   background: yellow;
   border-radius: 10px 10px 0 0;
+  opacity: 0.8;
 }
 
 .previewUserAvatar, .authorAvatar, .commentAuthorAvatar, .userAvatar {
@@ -243,6 +245,10 @@ body {
   height: 35px;
   content: url(./icons/defaultUser.png);
   left: 10px;
+}
+
+.previewUserAvatar {
+  margin-left: 10px;
 }
 
 .previewInfo {
@@ -254,13 +260,24 @@ body {
   padding-left: 10px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .previewAuthor {
+  color: black;
   height: 20px;
   line-height: 15px;
   top: 0px;
   font-style: italic;
   margin: 0px;
   cursor: pointer;
+  opacity: 0.8;
+  font-weight: bold;
+}
+
+.previewAuthor:hover {
+  opacity: 1;
 }
 
 .previewDateAndReadingTime {
@@ -269,6 +286,7 @@ body {
   font-size: 13px;
   opacity: 0.7;
   height: 20px;
+  font-style: italic;
 }
 
 .previewDate, .readingTime {
@@ -284,13 +302,14 @@ body {
 }
 
 .previewCaption {
+  color: black;
   margin: 5px;
   cursor: pointer;
 }
 
 .previewDescription {
   margin: 5px;
-  opacity: 0.8;
+  opacity: 0.7;
   font-style: italic;
 }
 
