--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -195,6 +195,11 @@ body {
   box-shadow: inset 0 0 5px rgba(0,0,0,.2), 0 2px 0 rgba(255,255,255,.4);
 }
 
+.followButton {
+  margin: 2px;
+  border-radius: 4px;
+}
+
 .submitButton {
   width: 40%;
   height: 50px;
@@ -213,11 +218,22 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  list-style: none;
+  color: black;
+  text-decoration: none;
 }
 
 .navEl {
-  margin-left: 30px;
+  margin-left: 20px;
+  color: black;
   cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.navEl:hover {
+  background: rgba(255, 255, 0, 0.6);
 }
 
 .previewContainer {
@@ -262,6 +278,7 @@ body {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 .previewAuthor {
@@ -364,8 +381,12 @@ a {
 }
 
 .activeNavLink {
-  font-weight: bold;
-  font-style: italic;
+  /*font-weight: bold;*/
+  background: yellow;
+}
+
+.activeNavLink:hover {
+  background: yellow;
 }
 
 .articleContainer {
@@ -385,8 +406,12 @@ a {
   flex-direction: row;
   align-items: center;
   height: 70px;
-  padding-left: 10%;
+  margin-left: 10%;
+  padding: 8px;
   align-self: left;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .25), inset 0 2px 0 rgba(255, 255, 255, .6);
 }
 
 .articleAuthorDescription {
