--- a/blogUI/src/style.css
+++ b/blogUI/src/style.css
@@ -471,6 +471,7 @@ a {
   height: 80px;
   max-height: 80px;
   margin-bottom: 30px;
+  resize: none;
 }
 
 .commentsContainer {
@@ -541,6 +542,13 @@ a {
   padding-top: 100px;
 }
 
+.userPageHeader {
+  background: white;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .25), inset 0 2px 0 rgba(255, 255, 255, .6);
+}
+
 .userAvatar {
   height: 60px;
   width: 60px;
@@ -560,7 +568,7 @@ a {
 
 .userPageButtons {
   position: absolute;
-  right: 10px;
+  right: 20px;
 }
 
 .userPageContent {
@@ -571,9 +579,54 @@ a {
   margin: 100px auto;
 }
 
+.userPageUser {
+  margin: 5px;
+}
+
+.userPageFol {
+  margin: 5px;
+  opacity: 0.7;
+  font-style: italic;
+}
+
+.bUserPage {
+  padding: 7px;
+  margin-left: 5px;
+  border-radius: 5px;
+}
+
 .writeArticleContainer {
   padding-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.titleInput {
+  width: 50%;
+  height: 50px;
+  font-size: 30px;
+  font-style: bold;
+}
+
+.descriptionArea {
+  width: 70%;
+  height: 130px;
+  font-size: 20px;
+  resize: none;
+}
+
+.articleArea {
+  width: 70%;
+  height: 250px;
+  font-size: 25px;
+  resize: none;
+}
+
+.publishButton {
+  padding: 10px;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 40%;
 }
